--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html>
 <head>
   <meta charset="utf-8" />
-  <title>PaiizZ Personal Site</title>
+  <title>PaiizZ</title>
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"></link>
   <link type="text/css" rel="stylesheet" href="dist/css/materialize.min.css"  media="screen,projection"></link>
-  <!-- <link href="dist/css/materialdesignicons.min.css" media="all" rel="stylesheet" type="text/css" /> -->
+  <link href="dist/css/materialdesignicons.min.css" media="all" rel="stylesheet" type="text/css" />
   <script type="text/javascript" src="dist/js/jquery-3.1.1.min.js"></script>
   <script type="text/javascript" src="dist/js/materialize.min.js"></script>
 </head>
