--- a/index.html
+++ b/index.html
@@ -1,16 +1,12 @@
-<!Doctype html>
-<html>
-<head>
-  <meta charset="utf-8" />
-  <title>PaiizZ</title>
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"></link>
-  <link type="text/css" rel="stylesheet" href="dist/css/materialize.min.css"  media="screen,projection"></link>
-  <link href="dist/css/materialdesignicons.min.css" media="all" rel="stylesheet" type="text/css" />
-  <script type="text/javascript" src="dist/js/jquery-3.1.1.min.js"></script>
-  <script type="text/javascript" src="dist/js/materialize.min.js"></script>
-</head>
-<body>
-  <div id="app"></div>
-  <script type="text/javascript" src="dist/js/bundle.js"></script>
-</body>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <title>Vuepage</title>
+    <link rel="stylesheet" href="css/bulma.css" media="screen" title="no title">
+  </head>
+  <body>
+    <div id="app"></div>
+    <script src="/dist/build.js"></script>
+  </body>
 </html>
